--- a/.github/workflows/cam.yml
+++ b/.github/workflows/cam.yml
@@ -1,3 +1,24 @@
+Windows (10.0.19045.2965)
+Tailscale version
+1.46.0
+ID
+nDMUNN3CNTRL
+Node key
+nodekey:3255c34602bd8e8f5b00031358f86df2e138916c0235b410fea46201d0c45f52
+Copy
+Created
+Jul 19, 2023 at 6:01 PM EDT
+Last seen
+6:23 PM EDT
+Key expiry
+6 months from now
+RELAYS
+Latency
+Dallas: 24.58 ms
+New York City: 44.29 ms
+Chicago: 113.87 ms
+ADDRESSES
+Tailscale IPv4
 100.68.95.132
 Copy
 Tailscale IPv6
